<?xml version="1.0"?>
<package>
  <name>realhw_control</name>
  <version>0.0.0</version>
  <description>The realhw_control package</description>

  <maintainer email="takigami1w090318@gmail.com">Takijo Kota</maintainer>

  <license>BSD</license>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
